--- a/speeltuin/mihxil/kupu/mmbase/drawers/links.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/drawers/links.jspx
@@ -1,19 +1,21 @@
 <?xml version="1.0" ?>
-<mm:content xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0" type="text/xml" language="en" expires="-1">
-<collection>
-  <uri>drawers/links.jspx</uri>
-  <icon>kupuimages/kupulibrary.png</icon>
-  <title>MMBase</title>
-  <uri>drawers/links.jspx</uri>
-  <items>
-    <mm:cloud>
-      <mm:listnodes type="urls" id="url">
-        <resource id="${url.number}">          
-          <uri><mm:field name="url" /></uri>
-          <title><mm:field name="tite" /></title>
-        </resource>
-      </mm:listnodes>
-    </mm:cloud>
-  </items>
-</collection>
+<mm:content xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0" 
+	    type="text/xml" 
+	    expires="-1">
+  <collection>
+    <uri>drawers/links.jspx</uri>
+    <icon>kupuimages/kupulibrary.png</icon>
+    <title>MMBase</title>
+    <uri>drawers/links.jspx</uri>
+    <items>
+      <mm:cloud>
+	<mm:listnodes type="urls" id="url">
+	  <resource id="${url.number}">          
+	    <uri><mm:field name="url" /></uri>
+	    <title><mm:field name="tite" /></title>
+	  </resource>
+	</mm:listnodes>
+      </mm:cloud>
+    </items>
+  </collection>
 </mm:content>
