--- a/speeltuin/mihxil/kupu/mmbase/drawers/library.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/drawers/library.jspx
@@ -4,7 +4,7 @@
     type="text/xml" 
     expires="-1">
   <!--      
-       $Id: library.jspx,v 1.3 2005-06-22 23:25:17 michiel Exp $
+       $Id: library.jspx,v 1.4 2005-06-23 13:44:51 michiel Exp $
   -->  
   <jsp:output omit-xml-declaration="yes" />
 
@@ -14,6 +14,7 @@
 
     <mm:import externid="librarysize">50</mm:import>
     <mm:import externid="page">0</mm:import>
+    <mm:import externid="nodetype">images</mm:import>
 
 
     <mm:context id="drawer" scope="request">
