more generic libraries. Virtually anything can be made clickable now
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15597 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/drawers/collection.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/drawers/collection.jspx
@@ -19,12 +19,15 @@
         <mm:listnodescontainer id="query" type="$nodetype">
           
           <jsp:directive.include file="search.constraints.jspx" />
-          
           <mm:sortorder field="number" direction="down" />
           <mm:maxnumber value="$max" />
           <mm:offset    value="${page * max}" />
-          
-          <mm:include page="${nodetype}.items.jspx" />
+          <mm:haspage page="${nodetype}.items.jspx">
+            <mm:include page="${nodetype}.items.jspx" />
+          </mm:haspage>
+          <mm:haspage page="${nodetype}.items.jspx" inverse="true">
+            <mm:include page="texts.items.jspx" />
+          </mm:haspage>
           
         </mm:listnodescontainer>
       </mm:context>
