--- a/speeltuin/mihxil/kupu/mmbase/drawers/collection.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/drawers/collection.jspx
@@ -14,11 +14,15 @@
     <title>MMBase</title>
     <mm:cloud rank="basic user">
       <mm:import externid="nodetype">images</mm:import>
+      <mm:import externid="source" />
 
       <mm:context scope="request" id="drawer">
         <mm:listnodescontainer id="query" type="$nodetype">
           
           <jsp:directive.include file="search.constraints.jspx" />
+          <mm:present referid="source">
+            <mm:constraint field="number" inverse="true" value="${source}" />
+          </mm:present>
           <mm:sortorder field="number" direction="down" />
           <mm:maxnumber value="$max" />
           <mm:offset    value="${page * max}" />
