--- a/speeltuin/mihxil/kupu/mmbase/drawers/search.library.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/drawers/search.library.jspx
@@ -5,7 +5,7 @@
     expires="-1">
   <jsp:directive.page  errorPage="../error.jspx" />
   <!--      
-       $Id: search.library.jspx,v 1.2 2005-10-03 17:37:39 michiel Exp $
+       $Id: search.library.jspx,v 1.3 2005-10-19 14:18:50 michiel Exp $
   -->  
   <jsp:output omit-xml-declaration="yes" />
 
@@ -15,7 +15,7 @@
     <mm:import externid="librarysize">50</mm:import>
     <mm:import externid="page">0</mm:import>
     <mm:import vartype="list" externid="nodetypes">images</mm:import>
-
+    <mm:import externid="source" />
 
     <library id="${nodetypes}_${search}">
       <uri><mm:url referids="search,librarysize@max,nodetypes" page="drawers/collection.jspx" /></uri>
@@ -30,7 +30,9 @@
             <mm:remove referid="query" />
             <mm:listnodescontainer id="query" type="$nodetype">          
               <jsp:directive.include file="search.constraints.jspx" />
-              
+              <mm:present referid="source">
+                <mm:constraint field="number" inverse="true" value="${source}" />
+              </mm:present>              
               <mm:sortorder field="number" direction="down" />
               <mm:maxnumber value="$librarysize" />
               <mm:offset    value="${librarysize * page}" />
