check for existance of relaiton manager, to make it impossible to create relations which are not allowed by cloud
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15896 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/drawers/libraries.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/drawers/libraries.jspx
@@ -7,13 +7,19 @@
   <mm:cloud>
     
     <mm:import externid="nodetypes" vartype="list">images,attachments,segments,urls</mm:import>
+    <mm:import id="s" externid="source" />
+    <mm:present referid="s">
+      <mm:node referid="s" id="s" />
+    </mm:present>
     <libraries>
       <mm:stringlist referid="nodetypes" id="nodetype">
         <mm:hasnodemanager name="$_">
-          <mm:context scope="request" id="drawer">	  
-            <mm:import from="parent" externid="nodetype" reset="true" />
-            <mm:include page="library.jspx" />
-          </mm:context>
+          <mm:hasrelationmanager sourcemanager="$s" destinationmanager="$_" role="idrel">
+            <mm:context scope="request" id="drawer">	  
+              <mm:import from="parent" externid="nodetype" reset="true" />
+              <mm:include page="library.jspx" />
+            </mm:context>
+          </mm:hasrelationmanager>
         </mm:hasnodemanager>
       </mm:stringlist>
     </libraries>
