--- a/speeltuin/mihxil/kupu/mmbase/kupustyle.css
+++ b/speeltuin/mihxil/kupu/mmbase/kupustyle.css
@@ -150,3 +150,10 @@ div.quote {
 div.caption { 
   background-color: #ddd;
 }
+ul, ol { 
+  list-style-position: outside;
+}
+
+li { 
+  margin-left: 20px;
+}
